# 35mm-Paris

./: .gitignore  README.md  requirement.txt  test.py
backend/: Makefile  pyproject.toml  validation_report.txt
backend/scripts/: import_movies.py  import_paris.py  import_paris_complete.py  update_cinema_circuits.py  validate_data.py
backend/sql/: create_table.sql 
backend/src/: models.py
backend/src/config/: __init__.py  settings.py
backend/src/db/: bulk_operations.py  insert_logic.py  supabase_client.py
backend/src/utils/: logger.py
backend/tests/: conftest.py  conftests.py  test_insert_logic.py
database/: theater.py
