[project]
name = "35mm-paris-backend"
version = "0.1.0"
description = "Backend for aggregating Paris cinema showtimes"
requires-python = ">=3.13"
dependencies = [
    "allocine-seances",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0", 
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "Q",    # flake8-quotes
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
]
ignore = [
    "E203",  # Whitespace before ':' (conflicts with black)
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (handled by black)
    "E722",  # Do not use bare except
    "N815",  # mixedCase variable names (API compatibility)
    "B007",  # Loop control variable not used
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]